add example program